@@ -1,5 +1,13 @@
 2008-04-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* qt4/disp_holder.cpp:
+	* qt4/log_player.cpp:
+	* qt4/main_window.cpp:
+	* qt4/monitor_client.cpp:
+	* rcsslogplayer/util.cpp:
+	* rcsslogplayer/util.h:
+	- implemented simple monitor client. Not completed yet.
+
 	* qt4/image_save_dialog.cpp:
 	* qt4/image_save_dialog.h:
 	* qt4/Makefile.am:
